# Window_Creator

./: .gitignore  CMakeLists.txt  README.md  build_example.bat  build_example.sh  build_lib.bat  build_lib.sh  build_window_handler.bat
include/: i_window_properties.hpp  window.hpp  window_creator.hpp  window_properties.hpp
source/: example_main.cpp  window.cpp  window_creator.cpp  window_properties.cpp
